--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,7 @@
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Email</th>
+    <th>StuNo</th>
     <th></th>
     <th></th>
     <th></th>
@@ -11,8 +10,7 @@
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
+    <td><%= user.stuNo %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
@@ -23,4 +21,3 @@
 <br />
 
 <%= link_to 'New User', new_user_path %>
-<%= button_to '注册', new_user_path, :method => :get %>
